# evoting-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/api/: client.rs  mod.rs
src/api/server/: bb.rs  mod.rs  rt.rs  tt.rs
src/core/: keys.rs  mod.rs  tally.rs
src/core/vote/: auth.rs  choice.rs  mod.rs
tests/: api.rs  bench_pipeline.rs
