[package]
name = "evoting"
version = "0.1.0"
edition = "2021"

[dependencies]
dlog-group = { git = "https://github.com/aleph-fbk/pet-crypto-primitives-rs", rev = "2cdf31a" }
dlog-sigma-primitives = { git = "https://github.com/aleph-fbk/pet-crypto-primitives-rs", rev = "2cdf31a" }

# Serde / encoding
serde = { version = "1", default-features = false, features = ["derive","alloc"] }                                                                  
# base64ct = { version = "1.8.0", default-features = false, features = ["alloc"] }  
zeroize = { version = "1.8.1", default-features = false, features = ["alloc"] }   
merlin = {version = "3.0.0"}
serde_cbor = "0.10"

# Randomness
rand_core = "0.6.4"   # version used in the EC implementations       
rand = { version = "^0.8", default-features = true } 

# Hashes
sha3 = "0.10.8"

[dev-dependencies]
serde_json = "1"

# re-import for serialization in tests
curve25519-dalek = { version = "4.1.3", features = ["serde"] }

[features]
default = ["serde"]
serde = []